# myshell

./: README.md  makefile  mycat  mycp  mymkdir  mymv  myrm  myshell  myshell.cpp
mycat_dir/: main.c  makefile
mycp_dir/: makefile  mycp.cpp
mygrep_dir/: CMakeLists.txt  main.cpp  makefile
myls_dir/: CMakeLists.txt  Makefile  myls  myls.cpp
mymkdir_dir/: makefile  mymkdir.cpp
mymv_dir/: makefile  mymv.cpp
myrm_dir/: makefile  myrm.cpp
